--- a/Aiche Bois/Aiche Bois.csproj
+++ b/Aiche Bois/Aiche Bois.csproj
@@ -174,11 +174,11 @@
       <DependentUpon>FormMessage.cs</DependentUpon>
     </Compile>
     <Compile Include="Mesure.cs" />
-    <Compile Include="PrintPdf.cs">
+    <Compile Include="FormPrint.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PrintPdf.Designer.cs">
-      <DependentUpon>PrintPdf.cs</DependentUpon>
+    <Compile Include="FormPrint.Designer.cs">
+      <DependentUpon>FormPrint.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -188,11 +188,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Pvc.cs" />
-    <Compile Include="User.cs">
+    <Compile Include="FormUser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="User.Designer.cs">
-      <DependentUpon>User.cs</DependentUpon>
+    <Compile Include="FormUser.Designer.cs">
+      <DependentUpon>FormUser.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FormAjout.resx">
       <DependentUpon>FormAjout.cs</DependentUpon>
@@ -206,16 +206,16 @@
     <EmbeddedResource Include="FormMessage.resx">
       <DependentUpon>FormMessage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PrintPdf.resx">
-      <DependentUpon>PrintPdf.cs</DependentUpon>
+    <EmbeddedResource Include="FormPrint.resx">
+      <DependentUpon>FormPrint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="User.resx">
-      <DependentUpon>User.cs</DependentUpon>
+    <EmbeddedResource Include="FormUser.resx">
+      <DependentUpon>FormUser.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Aiche Bois_TemporaryKey.pfx" />
     <None Include="packages.config" />
