--- a/Aiche Bois/Aiche Bois.csproj
+++ b/Aiche Bois/Aiche Bois.csproj
@@ -46,6 +46,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -148,37 +150,38 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
-    <Compile Include="FormAjout.cs">
+    <Compile Include="f_ajout.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormAjout.Designer.cs">
-      <DependentUpon>FormAjout.cs</DependentUpon>
+    <Compile Include="f_ajout.Designer.cs">
+      <DependentUpon>f_ajout.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormAvance.cs">
+    <Compile Include="f_avance.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormAvance.Designer.cs">
-      <DependentUpon>FormAvance.cs</DependentUpon>
+    <Compile Include="f_avance.Designer.cs">
+      <DependentUpon>f_avance.cs</DependentUpon>
     </Compile>
     <Compile Include="Facture.cs" />
-    <Compile Include="FormClient.cs">
+    <Compile Include="f_main_client.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormClient.Designer.cs">
-      <DependentUpon>FormClient.cs</DependentUpon>
+    <Compile Include="f_main_client.Designer.cs">
+      <DependentUpon>f_main_client.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMessage.cs">
+    <Compile Include="f_message.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMessage.Designer.cs">
-      <DependentUpon>FormMessage.cs</DependentUpon>
+    <Compile Include="f_message.Designer.cs">
+      <DependentUpon>f_message.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogFile.cs" />
     <Compile Include="Mesure.cs" />
-    <Compile Include="FormPrint.cs">
+    <Compile Include="f_print.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormPrint.Designer.cs">
-      <DependentUpon>FormPrint.cs</DependentUpon>
+    <Compile Include="f_print.Designer.cs">
+      <DependentUpon>f_print.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -188,34 +191,34 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Pvc.cs" />
-    <Compile Include="FormUser.cs">
+    <Compile Include="f_user.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormUser.Designer.cs">
-      <DependentUpon>FormUser.cs</DependentUpon>
+    <Compile Include="f_user.Designer.cs">
+      <DependentUpon>f_user.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FormAjout.resx">
-      <DependentUpon>FormAjout.cs</DependentUpon>
+    <EmbeddedResource Include="f_ajout.resx">
+      <DependentUpon>f_ajout.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormAvance.resx">
-      <DependentUpon>FormAvance.cs</DependentUpon>
+    <EmbeddedResource Include="f_avance.resx">
+      <DependentUpon>f_avance.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormClient.resx">
-      <DependentUpon>FormClient.cs</DependentUpon>
+    <EmbeddedResource Include="f_main_client.resx">
+      <DependentUpon>f_main_client.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMessage.resx">
-      <DependentUpon>FormMessage.cs</DependentUpon>
+    <EmbeddedResource Include="f_message.resx">
+      <DependentUpon>f_message.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPrint.resx">
-      <DependentUpon>FormPrint.cs</DependentUpon>
+    <EmbeddedResource Include="f_print.resx">
+      <DependentUpon>f_print.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormUser.resx">
-      <DependentUpon>FormUser.cs</DependentUpon>
+    <EmbeddedResource Include="f_user.resx">
+      <DependentUpon>f_user.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Aiche Bois_TemporaryKey.pfx" />
     <None Include="packages.config" />
